Integrate new temp sensor script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port = 4020
 
 servo.script.filename=servoController.py
-dht22.script.filename=DHT22Reader.py
+ds18b20.script.filename=DS18B20.py
