--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ server.port = 4020
 servo.script.filename=servoController.py
 ds18b20.script.filename=DS18B20.py
 
+logging.file.path=runLog
 logging.file.max-size=500MB
