Add google home integration along with run mode
Add outh handling for google home and fulfillment for the different query
types.
Add heat and cool as operation modes.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	}
 	compile "io.springfox:springfox-swagger2:2.9.2"
 	compile "io.springfox:springfox-swagger-ui:2.9.2"
+	compile "com.google.actions:actions-on-google:1.8.0"
 }
 
 test {
